--- a/README.org
+++ b/README.org
@@ -1,2 +1,4 @@
 * dotfiles
 My personal configuration files
+
+I currently use [[https://voidlinux.org/][Void Linux]] on my desktop and [[https://endeavouros.com/][EndeavourOS]] on my laptop.
